--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
   </build>
   
   <dependencies>
+	  
 	  <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-servlet-core -->
 	<dependency>
 	    <groupId>org.glassfish.jersey.containers</groupId>
@@ -36,7 +37,7 @@
 	    <artifactId>javax.ws.rs-api</artifactId>
 	    <version>2.1.1</version>
 	</dependency>
-
+	
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 	<dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
@@ -73,6 +74,28 @@
 	    <artifactId>jaxb-impl</artifactId>
 	    <version>2.3.9</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
+
+	<dependency>
+	    <groupId>io.jsonwebtoken</groupId>
+	    <artifactId>jjwt-api</artifactId>
+	    <version>0.11.5</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl -->
+	<dependency>
+	    <groupId>io.jsonwebtoken</groupId>
+	    <artifactId>jjwt-impl</artifactId>
+	    <version>0.11.5</version>
+	    <scope>runtime</scope>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
+	<dependency>
+	    <groupId>io.jsonwebtoken</groupId>
+	    <artifactId>jjwt-jackson</artifactId>
+	    <version>0.11.5</version>
+	</dependency>
+
+
 
   </dependencies>
 </project>
